[WIP] age, jail, death, obliviate : swagger part doesn't work. [TODO] - fix swagger part - fix UpdateWizards - fct GetStatusById/CheckStatusById to be build
